--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     background-color: #eef9bf;
     font-family: "Roboto", sans-serif;
@@ -15,6 +18,9 @@ h1 {
     justify-content: space-around;
     flex-wrap: wrap;
     margin: 40px auto;
+    padding: 80px;
+
+
 }
 img {
     width: 100px;
@@ -23,19 +29,20 @@ img {
     width: 117px;
     height: 146px;
     position: relative;
+    margin: 60px 10px 0 10px;
 }
 .back {
     transform: rotateY(180deg);
   }
 
-  .click .back {
+.click .back {
     transform: rotateY(0deg);
   }
 
-  .click .front {
+.click .front {
     transform: rotateY(-180deg);
-  }
-  .lado {
+}
+.lado {
     width: 100%;
     height: 100%;
     display: flex;
