--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h1 {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 40px auto;
+    margin: 10px auto;
     padding: 80px;
 
 
@@ -29,7 +29,7 @@ img {
     width: 117px;
     height: 146px;
     position: relative;
-    margin: 60px 10px 0 10px;
+    margin: 40px 10px 0 10px;
 }
 .back {
     transform: rotateY(180deg);
@@ -56,6 +56,21 @@ img {
     border-radius: 5px;
     position: absolute;
   }
+  .tempo {
+    background-color: rgba(34, 73, 5, 0.7);
+    width: 90px;
+    height: 80px;
+    position: fixed;
+    right: 5px;
+    top: 57px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    color: white;
+    font-size: 46px;
+
+  }
   @media (max-width: 600px) {
     h1 {
         font-size: 36px;
@@ -64,7 +79,7 @@ img {
         letter-spacing: -0.004em;
         width: 312px;
         height: 63px;
-        margin-top: 3w0px;
+        margin-top: 30px;
     }
     .conteudo-superior {
         text-align: center;
@@ -78,8 +93,15 @@ img {
         justify-content: center;
         align-items: center;
         margin-top: 0;
+        padding: 20px;
     }
     .carta {
-        margin-top: 50px;
+        margin-top: 40px;
+    }
+    .tempo {
+        width: 70px;
+        height: 55px;
+        font-size: 28px;
+        top: 40px;
     }
   }
